---- Changes since 1.220 ----
All Webmin users can now report spam, rather than just those that have access to the SpamAssassin module.
---- Changes since 1.240 ----
Output from sa-learn or spamassassin is now show when reporting multiple messages as spam.
---- Changes since 1.250 ----
Added a Module Config option for selecting users to not display, thanks to Brad Kester.
The displayed size of mailboxes in Maildir format includes all files in the directory, rather than just those in the cur, tmp and new subdirectories in older Webmin releases.
---- Changes since 1.260 ----
When the module is configured to display only users with mail and no users have mail, then nothing will be displayed.
---- Changes since 1.270 ----
Added a Module Config option for setting the date format.
Added a Module Config option to enable pager arrows at the bottom of mail list and individual message pages.
Placed a Delete All button at the bottom of each user's mail list, for deleting all mail in a folder.
Added a Module Config option for setting the timezone for dates.
The simple search box accepts inputs like from: jcameron or size: 10000 to search on a single specific field.
Added a Module Config option for opening user email messages in separate windows.
---- Changes since 1.300 ----
The number of folders each user has is displayed in the user list.
---- Changes since 1.310 ----
Use ~username instead of the full home directory path in the folders list.
---- Changes since 1.330 ----
Replaced the HTMLarea widget for composing email with Xinha.
---- Changes since 1.340 ----
Removed huge un-necessary plugins and styles for Xinha.
The list of users to ignore is no longer checked with an un-necessary regular expression.
---- Changes since 1.370 ----
When viewing a user's spam folder, buttons to globally whitelist spam or report as non-spam are displayed.
---- Changes since 1.380 ----
Spam folders are detected from the Virtualmin configuration, if installed.